# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md
configuration/: base.yml  local.yml
migrations/: 20220320154238_create_subscriptions_table.sql  20220328103216_make_status_not_null_in_subscriptions.sql  20220328103432_create_subscription_tokens_table.sql  20220329150719_rename_subscription_id_to_subscriber_id_in_subscription_tokens.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
