[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-http = "3.0"
serde = { version = "1", features = ["derive"] }
config = "0.12.0"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
# 以下、構造化されたログを出力するためのクレート
log = "0.4.14"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-actix-web = "0.5.1"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    # sqlxがfutureにactixランタイムを使用し、TLSバックエンドにrustlsを使用するよう指示
    "runtime-actix-rustls",
    # sqlx::query!/sqlx::query_as!へのアクセスを提供
    "macros",
    # postgres固有の機能のロックを解除
    "postgres",
    # SQL_UUIDをuuidクレートからUuid型にマッピングするためのサポートを追加
    "uuid",
    # SQL_timestamptzをDateTime<T>型にマッピングするためのサポートをchronoクレートに格納
    "chrono",
    # マイグレーションをコードから実行できるようにする
    "migrate",
    # sqlxがbuild時にDBと接続しようとするのを防ぎ、Dockerビルド時のエラーを回避
    "offline"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dev-dependencies]
actix-rt = "2.7.0"
once_cell = "1.10.0"
reqwest = "0.11.10"
tokio = "1.17.0"
